# aoc-2021

./: .pre-commit-config.yaml  dev.sh  get.py  pyproject.toml  template.py
day01/: day1.py
day02/: day2.py
day03/: day3.py
day09/: day9.py
day10/: day10.py
day11/: day11.py
day12/: day12.py
day4/: day4.py
day5/: day5.py
day6/: day6.py
day7/: day7.py
day8/: day8.py
