[tool.poetry]
name = "aoc-2021"
version = "1.0.0"
description = "Advent of Code 2021"
license = "BSD-3-Clause"
authors = ["coreone <noreply@example.org>"]
readme = "README.md"
repository = "https://github.com/coreone/aoc-2021.git"
homepage = "https://github.com/coreone/aoc-2021.git"
keywords = ["advent", "code"]

[tool.poetry.dependencies]
python = "^3.6"  # Compatible python versions must be declared here

requests = "*"
toml = "^0.10"

[tool.poetry.dev-dependencies]
bump2version = "*"
codecov = "*"
coverage = ">=4.4.2"
fixtures = "*"
flake8 = "*"
green = ">=2.12.0"
mock = ">=2.0.0"
pydocstyle = "<4"
pylama = "*"
pylint = "*"
testtools = "*"
twine = "*"
unittest2 = ">=1.1.0"
wheel = "*"
yamllint = "*"
